SynProdGITV1/force-app/main/default/objects/Plant_Team_Data__c/Plant_Team_Data__c.object-meta.xml
<CustomObject>
    <description>Object to store the team associated to a plant.</description>
    <label>Plant Team Data</label>
    <nameField>
        <displayFormat>PTD-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plant Team Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>