SynProdGITV1/force-app/main/default/objects/Plant_Team_Data__c/fields/Plant_ID__c.field-meta.xml
<CustomField>
    <fullName>Plant_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plant ID</label>
    <referenceTo>Plant__c</referenceTo>
    <relationshipLabel>Plants Team Data</relationshipLabel>
    <relationshipName>Plants_Team_Data</relationshipName>
    <type>Lookup</type>
</CustomField>