SynProdGITV1/force-app/main/default/objects/Plant_Team_Data__c/fields/Plant_Team_Data_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Plant_Team_Data_External_Id__c</fullName>
    <description>External Id field for data migration</description>
    <externalId>true</externalId>
    <label>Plant Team Data External Id</label>
    <length>150</length>
    <type>Text</type>
</CustomField>