SynProdGITV1/force-app/main/default/objects/Plant_Team_Data__c/validationRules/Prevent_Both_User_and_Contact_Selected.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Both_User_and_Contact_Selected</fullName>
    <active>true</active>
    <description>User and Employee cannot both be selected at the same time.</description>
    <errorConditionFormula>AND(
  NOT(ISBLANK(User__c)),
  NOT(ISBLANK(Employee__c))
)</errorConditionFormula>
    <errorMessage>User and Employee cannot both be selected at the same time.</errorMessage>
</ValidationRule>