SynProdGITV1/force-app/main/default/objects/Plant_Team_Data__c/validationRules/Select_User_Or_Employee.validationRule-meta.xml
<ValidationRule>
    <fullName>Select_User_Or_Employee</fullName>
    <active>true</active>
    <description>User and Employee cannot both be selected at the same time.</description>
    <errorConditionFormula>OR(
ISBLANK(User__c) &amp;&amp; ISBLANK(Employee__c),  
AND(
    NOT(ISBLANK(User__c)),
    NOT(ISBLANK(Employee__c))              
)
)</errorConditionFormula>
    <errorMessage>You must choose one: User or Employee. Selecting both is not allowed.</errorMessage>
</ValidationRule>